# truliv-livekit-agent

./: .env.example  .gitignore
agent/: Dockerfile  agent_tools.py  assistant.py  config.py  database.py  intruction.py  lead_sync.py  logger.py  main.py  prompts.py  pyproject.toml  sheets_client.py  task_queue.py
agent/helpers/: warden_corn_api.py
agent/tools/: __init__.py  beds.py  geolocation.py  properties.py  rooms.py
deploy/: caddy.yaml  docker-compose.yaml  livekit.yaml  redis.conf
deploy/setup/: init.sh
deploy/sip/: dispatch-rule.json  inbound-trunk.json  outbound-trunk.json
docs/plans/: 2026-02-17-aws-deployment-guide.md  2026-02-17-truliv-voice-agent-design.md  2026-02-17-truliv-voice-agent-plan.md
scripts/: deploy.sh  test-outbound.py
