[project]
name = "truliv-agent"
version = "0.1.0"
description = "Truliv Voice AI Agent powered by LiveKit"
requires-python = ">=3.10,<3.14"
dependencies = [
    "livekit-agents[silero,turn-detector,google,deepgram,cartesia]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "httpx",
]

[project.scripts]
agent = "main:main"
